--- a/task03_0606/Views/Products/storeAIndex.cshtml
+++ b/task03_0606/Views/Products/storeAIndex.cshtml
@@ -3,26 +3,30 @@
     ViewBag.Title = "store21354423Index";
 }
 
-<h2>store21354423Index</h2>
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="~/css/Astyle.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet/scss" type="text/css" href="~/scss/Astyle.scss">
 <link rel="stylesheet" href="responsive-tables.css">
 
 <div class="container-fluid">
-
-
-
-    <div id="toolbar">
+        <div id="toolbar">
         <!-- Example DataTables Card-->
         <div class="card mb-3">
             <div class="card-header">
-                <h1><i class="fa fa-table"><a href="" class="white-text mx-3">商品列表</a></h1></i>
-                <button class="pull-right btn btn-warning" id="create">
-                    <i class="glyphicon glyphicon-remove"></i>@Html.ActionLink("Create New", "Create")
-                </button>
+                <div class="container">
+                    <img src="~/photo/world-cup-2018-day-12-6225439109414912-5753952654065664-ssw.png" alt="Notebook" style="width:100%;">
+                    <div class="content">
+                        <h1>Heading</h1><h1><i class="fa fa-table"><a href="~/Views/Products/storeAIndex.cshtml" class="white-text mx-3" style="color:white">麥當勞商品列表<i class="fa fa-search"></i></a></h1></i>
+<button class="pull-right btn btn-warning" id="create">
+    <i class="glyphicon glyphicon-remove"></i>@Html.ActionLink("Create New", "Create")
+</button>
+                    </div>
+                </div>
+                
             </div>
             <div class="card-body">
+
                 <div class="table-responsive">
                     <table class="table table-bordered" id="dataTable" width="140%" cellspacing="0">
                         <thead>
