--- a/task03_0606/Views/Products/storeBIndex.cshtml
+++ b/task03_0606/Views/Products/storeBIndex.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<task03_0606.Models.FoodProduct>
 @{
-    ViewBag.Title = "store21354423Index";
+    ViewBag.Title = "storeBIndex";
 }
 
 
@@ -8,22 +8,21 @@
 <link href="~/css/Astyle.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet/scss" type="text/css" href="~/scss/Astyle.scss">
 <link rel="stylesheet" href="responsive-tables.css">
-
 <div class="container-fluid">
-        <div id="toolbar">
+    <div id="toolbar">
         <!-- Example DataTables Card-->
         <div class="card mb-3">
             <div class="card-header">
                 <div class="container">
-                    <img src="~/photo/111.png" alt="Notebook" style="width:100%;">
+                    <img src="~/photo/storeBindex.jpg" alt="Notebook" style="width:100%;">
                     <div class="content">
-                        <h1><i class="fa fa-table"><a href="~/Products/storeAIndex" class="white-text mx-3" style="color:white">麥當勞商品列表<i class="fa fa-search"></i></a></h1></i>
-<button class="pull-right btn btn-warning" id="create">
-    <i class="glyphicon glyphicon-remove"></i>@Html.ActionLink("Create New", "Create")
-</button>
+                        <h1><i class="fa fa-table"><a href="~/Products/storeBIndex" class="white-text mx-3" style="color:white">花月嵐商品列表<i class="fa fa-search"></i></a></h1></i>
+                        <button class="pull-right btn btn-warning" id="create">
+                            <i class="glyphicon glyphicon-remove"></i>@Html.ActionLink("Create New", "Create")
+                        </button>
                     </div>
                 </div>
-                
+
             </div>
             <div class="card-body">
 
