--- a/task03_0606/Views/Shared/_Layout.cshtml
+++ b/task03_0606/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             @*側邊導覽*@
             <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
-                @if (Session["memberType"].ToString() == "Customer")
+                @if (Session["identity"].ToString() == "normalUser")
                 {
                     @*顧客專用-餐廳列表*@
                     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="餐廳列表">
@@ -74,7 +74,7 @@
 
 
                 }
-                @if (Session["memberType"].ToString() == "Business")
+                @if (Session["identity"].ToString() == "store" || Session["identity"].ToString() == "storeUser")
                 {
                     @*商家專用-未出餐訂單-訂單別*@
                     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="未出餐訂單-訂單別">
@@ -119,7 +119,7 @@
             @*上方導覽*@
             <ul class="navbar-nav ml-auto">
 
-                @if (Session["memberType"].ToString() == "Business")
+                @if (Session["identity"].ToString() == "store" || Session["identity"].ToString() == "storeUser")
                 {
                     @*商家專用-新單訊息*@
                     <li class="nav-item dropdown">
@@ -151,7 +151,7 @@
                         </div>
                     </li>
                 }
-                @if (Session["memberType"].ToString() == "Customer")
+                @if (Session["identity"].ToString() == "normal")
                 {
                     @*顧客專用-購物車訊息*@
                     <li id="Cart" class="nav-item dropdown">
@@ -268,6 +268,25 @@
             @RenderBody()
 
         </div>
+        <!-- Logout Modal-->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">準備登出?</h5>
+                        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">×</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">當你準備好離開時，按下"登出"按鍵登出。</div>
+                    <div class="modal-footer">
+                        <button class="btn btn-secondary" type="button" data-dismiss="modal">關閉</button>
+                        <a class="btn btn-primary" href="~/Member/Logout">登出</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
         <!-- /.container-fluid-->
         <!-- /.content-wrapper-->
         <footer class="sticky-footer">
