--- a/task03_0606/Views/Order/Order_list_costomer.cshtml
+++ b/task03_0606/Views/Order/Order_list_costomer.cshtml
@@ -1,14 +1,14 @@
-﻿
+﻿@model List<task03_0606.Models.Order>
 @{
     ViewBag.Title = "Order_list_costomer";
 }
 
 <ol class="breadcrumb">
-    <li class="breadcrumb-item active">未出餐訂單明細</li>
+    <li class="breadcrumb-item active">訂單列表</li>
 </ol>
 <div class="col-xl-12 col-sm-12 mb-12">
     <div class="card-header">
-        <i class="fa fa-table"></i>未出餐清單<div class="pull-right text-muted">Updated yesterday at 11:59 PM</div>
+        <i class="fa fa-table"></i>我的餐點訂單<div class="pull-right text-muted">Updated yesterday at 11:59 PM</div>
     </div>
     <div class="card-body">
         <div class="table-responsive">
@@ -18,21 +18,21 @@
                         <th>下單時間</th>
                         <th>訂單單號</th>
                         <th>座位</th>
-                        <th>結單時間</th>
+                        <th>訂單狀況</th>
 
                     </tr>
                 </thead>
 
                 <tbody>
 
-                    @foreach (task03_0606.Models.OrderList order in Model)
+                    @foreach(var order in Model)
 
                     {
                         <tr class="orderListItem">
-                            <td>@order.OrderTime</td>
-                            <td>@order.OrderId</td>
-                            <td>@order.SeatID</td>
-                            <td></td>
+                            <td>@order.orderDate</td>
+                            <td>@order.orderId</td>
+                            <td>@order.tableId</td>
+                            <td>@(order.orderState == 1 ? "待出餐" : "出餐完畢")</td>
                         </tr>
                     }
 
@@ -74,23 +74,27 @@
                     <table class="table table-hover">
                         <thead>
                             <tr>
+                                <th>項次</th>
                                 <th>廠商</th>
                                 <th>產品編號</th>
                                 <th>產品名稱</th>
                                 <th>數量</th>
                                 <th>單價</th>
                                 <th>小計</th>
-                                <th>訂單備註</th>
+                                <th>備註</th>
+                                <th>餐點狀態</th>
                             </tr>
                         </thead>
                         <tbody id="detailList">
                             <tr>
                                 <td>1</td>
                                 <td>1</td>
+                                <td>1</td>
                                 <td>可樂(中)</td>
                                 <td>2</td>
                                 <td>30</td>
                                 <td>60</td>
+                                <td>去冰</td>
                                 <td>去冰</td>
                             </tr>
 
@@ -114,7 +118,6 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button id="orderOK" type="button" class="btn btn-primary">出餐</button>
             </div>
         </div>
     </div>
@@ -148,12 +151,12 @@
                 var countSum = 0;
                 var amountSum = 0;
                 $.each(dataList, function (index, data) {
-                    $("#detailList").append('<tr>< td >' + index + '</td ><td>' + data.MemberName + '</td ><td>' + data.ProductID + '</td><td>' + data.ProductName + '</td><td>' + data.OrderCount + '</td><td>' + data.UnitPrice + '</td><td>' + data.OrderCount * data.UnitPrice + '</td><td>' + data.Note + '</td></tr >');
-                    countSum += data.OrderCount;
-                    amountSum += data.OrderCount * data.UnitPrice;
+                    $("#detailList").append('<tr><td>' + (index+1) + '</td><td>' + data.storeName + '</td><td>' + data.productID + '</td><td>' + data.productName + '</td><td>' + data.productCount + '</td><td>' + data.unitPrice + '</td><td>' + data.productCount * data.unitPrice + '</td><td>' + data.customerNote + '</td><td>' + (data.productionStatus==1?'餐點準備中':'餐點完成') + '</td></tr>');
+                    countSum += data.productCount;
+                    amountSum += data.productCount * data.unitPrice;
                 });
                 $("#detailSum").empty();
-                $("#detailSum").append('<tr>< td >總計</td ><td></td ><td></td><td></td><td>' + countSum + '</td><td></td><td>' + amountSum + '</td><td></td></tr >');
+                $("#detailSum").append('<tr><td>總計</td><td></td><td></td><td></td><td>' + countSum + '</td><td></td><td>' + amountSum + '</td><td></td><td></td><</tr>');
             });
     });
 
