--- a/task03_0606/Views/Products/Drinkproducts.cshtml
+++ b/task03_0606/Views/Products/Drinkproducts.cshtml
@@ -6,12 +6,11 @@
 <h2>飲品/湯品</h2>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
-<link href="/css/Astyle.css" rel="stylesheet" type="text/css" />
-<script src="/js/Aindex.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+<link href="~/css/Astyle.css" rel="stylesheet" type="text/css" />
+<script src="~/js/Aindex.js"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
 @*<header>
         <ul>
@@ -24,11 +23,10 @@
 
 
 <div class='row'>
-    @foreach(task03_0606.Models.FoodProduct db in Model)
-    {
-
-        <div class="product--red col-sm-2">
-            <div class="row"></div>
+    @{ var counter = 1; }
+    @foreach (task03_0606.Models.FoodProduct db in Model) {
+        <div class="col-sm">
+        <div class="product--red col-sm-12">
             <!-- Button trigger modal -->
             <img src='~/photo/@db.productPicture' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter.@db.productID" />
 
@@ -58,7 +56,7 @@
             <div class='product_inner'>
                 <p>@db.productName</p>
                 <p>Price $@db.productPrice</p>
-                <button type="button" id ="button1" onclick="AddToCart(@db.productID)">Add to basket</button>
+                <button type="button" id="button1" onclick="AddToCart(@db.productID)">Add to basket</button>
             </div>
 
             <div class='product_overlay'>
@@ -66,8 +64,15 @@
                 <i class='fa fa-check'></i>
             </div>
         </div>
-    }
     </div>
-<script>
-    
-</script>
+            if (counter % 6 == 0) {
+                @:</div><div class="row">
+                counter = 0;
+                }
+                counter++;
+                }
+            </div>
+        
+    <script>
+
+    </script>
