--- a/task03_0606/Views/Products/storeAIndex.cshtml
+++ b/task03_0606/Views/Products/storeAIndex.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<task03_0606.Models.FoodProduct>
 @{
-    ViewBag.Title = "store21354423Index";
+    ViewBag.Title = "storeAIndex";
 }
 
 
