--- a/task03_0606/Views/Products/Drinkproducts.cshtml
+++ b/task03_0606/Views/Products/Drinkproducts.cshtml
@@ -61,7 +61,7 @@
                 <div class='product_inner'>
                     <p>@db.productName</p>
                     <p>Price $@db.productPrice</p>
-                    <button class="button1">Add to basket</button>
+                    <button id="button" type="button">Add to basket</button>
                 </div>
 
                 <div class='product_overlay'>
